Sentiment Analysis on Reviews

--- a/Projects/Project.ipynb
+++ b/Projects/Project.ipynb
@@ -16841,18 +16841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Correlation of Normalized Sentiment and Rating\n",
-    "correlation(x, y)\n",
-    "x = np.array(df['Normalized Sentiment Score'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -16861,7 +16850,29 @@
        "0.5469346563250523"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Correlation of Normalized Sentiment and Rating\n",
+    "x = np.array(df['Normalized Sentiment Score'])\n",
+    "correlation(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5469346563250523"
+      ]
+     },
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16888,7 +16899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16909,7 +16920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16925,7 +16936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -16955,7 +16966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -18854,7 +18865,7 @@
        "[2897 rows x 26 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18865,7 +18876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -18920,7 +18931,7 @@
        "True                   118   1938"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
